<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login" >

    <com.ant.liao.GifView
        android:id="@+id/gif3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:paddingLeft="14dp"
        android:paddingTop="4dp" />

    <ImageView
        android:id="@+id/dynamic_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dip"
        android:adjustViewBounds="true"
        android:background="@drawable/title_mark"
        android:contentDescription="@string/name" />

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="110dip"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dip" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:stretchColumns="1" >

            <TableRow android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:singleLine="true" />
            </TableRow>

            <TableRow android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/secret"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:padding="4dip" >
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:background="@layout/button_set"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/register_linear"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="60dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/register_button" />

            <Button
                android:id="@+id/jump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/register_button_jump" />
        </LinearLayout>
    </LinearLayout>

    <cn.com.cmplatform.login.LoginPullDoorView
        android:id="@+id/myImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ddd" >

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/activity_prompt"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </cn.com.cmplatform.login.LoginPullDoorView>

</FrameLayout>