<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bar" >

        <Button
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:background="@layout/register_back" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/register_back"
            android:layout_alignBottom="@+id/register_back"
            android:layout_centerHorizontal="true"
            android:text="@string/register_title"
            android:textSize="30px" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center"
        android:stretchColumns="1" >

        <TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_86"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textSize="25sp"
                    android:text="+86"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/usernameRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/register_name_hint"
                    android:singleLine="true" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/register_passwd_hint"
                android:inputType="textPassword"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/chk_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/checkbox_bg"
            android:drawablePadding="4dp"
            android:padding="2dp"
            android:text="已阅读并同意"
            android:textColor="#888888" />

        <TextView
            android:id="@+id/tv_QQ_Server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="《服务条款》"
            android:textColor="#5858f8" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/register_title" />

</LinearLayout>